# pdf_rag_api

./: .env.sample  .gitignore  Makefile  README.md  compose.yaml  config.yaml  llm_providers.yaml  pyproject.toml
.devcontainer/: Dockerfile  config.yaml  devcontainer.json  docker-compose.yml  postStartCommand.sh
app/: main.py
app/api/: __init__.py  documents.py  question.py
app/core/: config.py  logging.py
app/db/: vector_db.py
app/services/: embedding.py  file_processor.py  vector_store.py
backend/: .dockerignore  .env.sample  Dockerfile  Makefile  llm_providers.yaml  pyproject.toml
backend/app/: __main__.py  main.py
backend/app/api/: documents.py  main.py  question.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/services/: file_processing.py  llm.py  vector_store.py
frontend/: Makefile  app.py  pyproject.toml
