[project]
name = "pdf-qa-api"
version = "0.1.0"
description = "API to handle PDF uploads and handle questions regarding the uploaded documents."
authors = [
    {name = "Juliano Choi",email = "julianochoi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "chromadb-client (>=1.0.8,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain[anthropic,google-genai,groq,openai] (>=0.3.25,<0.4.0)",
    "docling (>=2.31.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
mypy = "^1.15.0"
pytest = "^8.3.5"
coverage = "^7.8.0"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage]
paths.source = ["app"]
run.omit = [
  "tests/**",
  "app/main.py",
  "app/core/config.py",
]
run.branch = true
run.concurrency = ["greenlet"]  # required for more accurate coverage with async code
report.precision = 1
report.show_missing = true
report.skip_covered = true
html.directory = "coverage_html_report"
html.skip_covered = true
html.show_contexts = true


[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "FAST",
]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
files = "app"
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"